force-app/main/default/objects/Payout__c/Payout__c.object-meta.xml
<CustomObject>
    <label>Payout</label>
    <nameField>
        <displayFormat>Payout-{00000}</displayFormat>
        <label>Payout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>