force-app/main/default/objects/Payout__c/fields/Salesrep__c.field-meta.xml
<CustomField>
    <fullName>Salesrep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesrep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>