force-app/main/default/objects/Payout__c/fields/Target_Owner__c.field-meta.xml
<CustomField>
    <fullName>Target_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Owner</label>
    <referenceTo>Target_Owner__c</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>